관리자 프론트

--- a/NewProject/src/main/webapp/resources/join_login/css/style.css
+++ b/NewProject/src/main/webapp/resources/join_login/css/style.css
@@ -412,9 +412,13 @@ label.error {
     cursor: pointer;
 }
 
-label#duplicateMessage {
+div#duplicateMessage {
     font-size: 10px;
     color: #007bff;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
 }
 
 
