bg-01 bg-02 qna.jsp logo-1교체/main.css footer수정/member home about 수정/

--- a/NewProject/src/main/webapp/resources/main/css/main.css
+++ b/NewProject/src/main/webapp/resources/main/css/main.css
@@ -109,6 +109,10 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
   .container {max-width: 1200px;}
 }
 
+footer {
+    height: 200px;
+}
+
 /*------------------------------------------------------------------
 [ Slick2 ]*/
 .slick-slide {outline: none !important;}
