--- a/NewProject/src/main/webapp/resources/main/css/QnA게시판글.css
+++ b/NewProject/src/main/webapp/resources/main/css/QnA게시판글.css
@@ -77,7 +77,7 @@
             margin-top: 10px;
         }
         
-        #q_pass,#r_pass {
+        #q_pass {
         	border: 1px solid black;
         }
 
@@ -99,6 +99,7 @@
             border-radius: 20px;
             cursor: pointer;
             border: 1px solid black;
+            height: 42.5px;
         }
         
         .cancel-button {
@@ -109,9 +110,20 @@
             cursor: pointer;
             border: 1px solid black;
             border-radius: 0 20px 20px 0;
+            height: 42.5px;
         }
 
         .edit-button{
+            background-color: white;
+            color: black;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 20px;
+            cursor: pointer;
+            border: 1px solid black;
+            margin-left: auto;
+        }
+        .re_add-button{
             background-color: white;
             color: black;
             padding: 10px 20px;
@@ -132,7 +144,7 @@
             color: black;
         }
 
-        .edit-button:hover{
+        .edit-button:hover,.re_add-button:hover{
             background-color: lightgray;
             color: black;
         }
