--- a/NewProject/src/main/webapp/resources/join_login/css/style.css
+++ b/NewProject/src/main/webapp/resources/join_login/css/style.css
@@ -212,7 +212,7 @@ a {
 	position: absolute;
 	left: 0;
 	top: 0;
-	height: 110%;
+	height: /* 110%; */ 124%;
 	width: 100%;
 	content: "";
 	background: #384aeb;
@@ -222,7 +222,7 @@ a {
 
 .login_box_area .login_box_img .hover {
 	position: absolute;
-	top: 50%;
+	top: 60%;
 	left: 0px;
 	text-align: center;
 	width: 100%;
@@ -267,35 +267,69 @@ a {
 	padding: 30px 0
 }
 
+/*  수정 전
+.newpass_form_inner {
+	box-shadow: 0px 10px 40px 0px rgba(56, 74, 235, 0.1);
+	height: 110%;
+	text-align: center;
+	padding: 30px 0
+} */
+
+/* 수정후  */
+.newpass_form_inner {
+	box-shadow: 0px 10px 40px 0px rgba(56, 74, 235, 0.1);
+	height: 124%;
+	text-align: center;
+	padding: 30px;
+}
+
+/* before */
+/* @media ( min-width : 1000px) {
+	.login_form_inner, .newpass_form_inner {
+		padding-top: 215px;
+		padding-bottom: 0
+	}
+} */
+
+/* after */
 @media ( min-width : 1000px) {
-	.login_form_inner {
-		padding-top: 115px;
+	.login_form_inner, .newpass_form_inner {
+		padding-top: 40%;
 		padding-bottom: 0
 	}
 }
 
-.login_form_inner h3 {
+.login_form_inner h3, .newpass_form_inner h3 {
 	color: #222;
 	text-transform: uppercase;
 	font-size: 18px;
 	margin-bottom: 30px
 }
 
-.login_form_inner .login_form {
+.login_form_inner .login_form, .newpass_form_inner .login_form {
 	max-width: 385px;
 	margin: auto
 }
 
-.login_form_inner.reg_form {
+.login_form_inner .content, .newpass_form_inner .login_form {
+	max-width: 385px;
+	margin: auto
+}
+
+.login_form_inner.reg_form, .newpass_form_inner.reg_form {
 	padding-top: 60px
 }
 
-.login_form_inner.reg_form h3 {
+.login_form_inner.reg_form h3, .newpass_form_inner.reg_form h3 {
 	margin-bottom: 70px
 }
 
+#col-md-12 {
+	margin-bottom: 48px
+}
+
 .login .form-group {
-	margin-bottom: 42px
+	margin-bottom: 38px
 }
 
 .join .form-group input {
@@ -323,6 +357,10 @@ a {
 
 
 .login_form .form-group input.placeholder {
+	color: #999999
+}
+
+.content .form-group input.placeholder {
 	color: #999999
 }
 
@@ -420,18 +458,3 @@ div#duplicateMessage {
     left: 0;
     width: 100%;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
