김모세 게시물 상세보기 및 조회수 증가/ 그리고 검색기능 추가중

--- a/NewProject/src/main/webapp/resources/main/css/QnA게시판글.css
+++ b/NewProject/src/main/webapp/resources/main/css/QnA게시판글.css
@@ -28,6 +28,26 @@
             border: 2px solid black;
             margin: 20px auto 40px;
         }
+        .addcontainer > p{
+        	font-weight: bold;
+        }
+        
+        
+        ::placeholder {
+  			color: white;
+		}
+		
+		#adminPassword {
+			text-align: center;
+		}
+		
+		#adminPassword:hover {
+		    color: yellow;
+			background-color: red;
+        	border: 2px solid yellow;
+        	font-weight: bold;
+        	text-align: center;
+        }
  
         form {
             margin-top: 20px;
