--- a/NewProject/src/main/webapp/resources/main/css/QnA게시판글.css
+++ b/NewProject/src/main/webapp/resources/main/css/QnA게시판글.css
@@ -62,6 +62,11 @@
             width: 85px;
         }
         
+        #q_product_inquiry {
+            text-align: center;
+            width: 85px;
+        }
+        
         #product_type {
             width: 30%;
             padding: 10px;
@@ -100,6 +105,16 @@
             cursor: pointer;
             border: 1px solid black;
             height: 42.5px;
+        }
+        
+        .re_edit-button{
+        	background-color: black;
+            color: #ffffff;
+            padding: 10px 10px;
+            border: none;
+            cursor: pointer;
+            margin-left: auto;
+            border-radius: 20px 0 0 20px;
         }
         
         .cancel-button {
