다시보냅니다 11.11 김모세

--- a/NewProject/src/main/webapp/resources/main/css/main.css
+++ b/NewProject/src/main/webapp/resources/main/css/main.css
@@ -495,7 +495,7 @@ footer {
 
 /*---------------------------------------------*/
 .icon-header-noti::after {
-  content: attr(data-notify);
+/*   content: attr(data-notify); */
   font-family: Poppins-Regular;
   font-size: 12px;
   color: #fff;
