--- a/NewProject/src/main/webapp/resources/main/css/QnA게시판글.css
+++ b/NewProject/src/main/webapp/resources/main/css/QnA게시판글.css
@@ -153,6 +153,28 @@
             display: flex;
             margin-top: 20px;
         }
+        
+         #toggle-button {
+   			background-color: black;
+    		color: #fff;
+    		padding: 10px 20px;
+    		border: none;
+    		cursor: pointer;
+    		margin: 0 auto;
+    		display: block;
+    		border-radius: 20px;
+		}
+		
+		 #toggle-button:hover {
+   			background-color: lightgray;
+    		color: black;
+    		padding: 10px 20px;
+    		border: none;
+    		cursor: pointer;
+    		margin: 0 auto;
+    		display: block;
+    		border-radius: 20px;
+		}
 
         input[type="submit"]:hover{
             background-color: lightgray;
